--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ lazy_static = "1.4"
 anyhow = "1.0"
 lsx = {version = "1.1", default-features = false, features = ["sha256"]}
 libc = ""
+portaudio = "0.7"
