--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 gtk = {version = "0.9.0", features = ["v3_16"]}
 gio = {version = "", features = ["v2_44"]}
 glib = ""
-ffmpeg-dev = "0.3.8"
+# (Using a version patched to build debug symbols, until we're sure we're not
+# doing anything wrong)
+#ffmpeg-dev = "0.3.8"
+ffmpeg-dev = {path = "../ffmpeg-dev-rs"}
 mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
 lazy_static = "1.4"
 anyhow = "1.0"
