--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 gtk = {version = "0.9.0", features = ["v3_16"]}
 gio = {version = "", features = ["v2_44"]}
 glib = ""
+gdk = ""
 # (Using a version patched to build debug symbols, until we're sure we're not
 # doing anything wrong)
 #ffmpeg-dev = "0.3.8"
