--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ anyhow = "1.0"
 lsx = {version = "1.1", default-features = false, features = ["sha256"]}
 libc = ""
 portaudio = "0.7"
+rand = "0.8"
