--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,7 @@ gtk = {version = "0.9.0", features = ["v3_16"]}
 gio = {version = "", features = ["v2_44"]}
 glib = ""
 gdk = ""
-# (Using a version patched to build debug symbols, until we're sure we're not
-# doing anything wrong)
-#ffmpeg-dev = "0.3.8"
-ffmpeg-dev = {path = "../ffmpeg-dev-rs"}
+ffmpeg-dev = "0.3.8"
 mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
 lazy_static = "1.4"
 anyhow = "1.0"
