--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "MIT"
 
 [dependencies]
+arrayref = "0.3.6"
 gtk = {version = "0.9.0", features = ["v3_16"]}
 gio = {version = "", features = ["v2_44"]}
 glib = ""
@@ -18,3 +19,6 @@ lsx = {version = "1.1", default-features = false, features = ["sha256"]}
 libc = ""
 portaudio = "0.7"
 rand = "0.8"
+rusqlite = "0.24.2"
+serde = "1.0"
+serde_json = "1.0"
