--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ libc = ""
 portaudio = "0.7"
 rand = "0.8"
 rusqlite = "0.24.2"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
