--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,18 @@ license = "MIT"
 
 [dependencies]
 alphanumeric-sort = "1.4"
+anyhow = "1.0"
 arrayref = "0.3.6"
-gtk = {version = "0.9.0", features = ["v3_16"]}
+ffmpeg-dev = "0.3.8"
+gdk = ""
 gio = {version = "", features = ["v2_44"]}
 glib = ""
-gdk = ""
-ffmpeg-dev = "0.3.8"
-mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
+gtk = {version = "0.9.0", features = ["v3_16"]}
 lazy_static = "1.4"
-anyhow = "1.0"
-lsx = {version = "1.1", default-features = false, features = ["sha256"]}
 libc = ""
+lsx = {version = "1.1", default-features = false, features = ["sha256"]}
+mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
+mpris-player = "0.6"
 portaudio = "0.7"
 rand = "0.8"
 rusqlite = "0.24.2"
