--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,13 @@ lazy_static = "1.4"
 libc = ""
 lsx = {version = "1.1", default-features = false, features = ["sha256"]}
 mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
-mpris-player = "0.6"
+mpris-player = {version = "0.6", optional = true}
 portaudio = "0.7"
 rand = "0.8"
 rusqlite = "0.24.2"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+
+[features]
+default = ["mpris"]
+mpris = ["mpris-player"]
