--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rand = "0.8"
 rusqlite = "0.24.2"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+toml = "0.5"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 alsa-sys = "0.3"
