--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ alphanumeric-sort = "1.4"
 anyhow = "1.0"
 arrayref = "0.3.6"
 atomic-take = "1.0"
+concurrent-queue = "1.2.2"
 env_logger = "0.8"
 ffmpeg-dev = "0.3.8"
 fuse-rust = "0.2"
