--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,12 @@ concurrent-queue = "1.2.2"
 env_logger = "0.8"
 ffmpeg-dev = "0.3.8"
 fuse-rust = "0.2"
-gdk = ""
-gio = {version = "", features = ["v2_44"]}
-glib = ""
+gdk = "*"
+gio = {version = "*", features = ["v2_44"]}
+glib = "*"
 gtk = {version = "0.9.0", features = ["v3_16"]}
 lazy_static = "1.4"
-libc = ""
+libc = "*"
 libsoxr = "0.2.7"
 log = "0.4"
 lsx = {version = "1.1", default-features = false, features = ["sha256"]}
